--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import './assets/style/const.scss';
+
+a,
+a:visited,
+a:focus,
+a:hover {
+  text-decoration: none;
+  color: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: $font-family;
+  font-weight: 400;
+  font-size: 16px;
+  background-color: $color-white;
+  color: $color-grey;
+}
+
+.main {
+  flex: 1 1 auto;
+  padding: 20px 0;  
+}
+
+.container {
+    max-width: 100%;
+    padding: 20px;
+    margin: 0 auto;
 }
