--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -25,7 +25,8 @@
   }
 
   img {
-    width: 200px;
+    height: 150px;
+    max-width: 200px;
     border-radius: 10%;
     box-shadow: $glow-grey;
   }
