refactor: change styles

--- a/src/assets/style/const.scss
+++ b/src/assets/style/const.scss
@@ -10,4 +10,6 @@ $glow-grey: 0 0 34px white, 0 0 25px #9595f0, 0 0 5px #727589, 0 0 29px white;
 $color-white: rgb(233,236,253);
 $color-grey: rgb(181,191,244);
 $color-pink: rgb(249,223,250);
+$color-lilac: rgb(98, 109, 165);
+$color-error: rgba(231, 13, 67, 0.959);
 $font-family: 'Lato', sans-serif;
