refactor: move test logic to home.test

--- a/src/components/common/Loading/Loading.scss
+++ b/src/components/common/Loading/Loading.scss
@@ -1,74 +1,73 @@
 @import '../../../assets/style/const.scss';
 
 .loading {
-	position:relative;
-	width:234px;
-	height:28px;
-	margin:auto;
+  position:relative;
+  width:234px;
+  height:28px;
+  margin:auto;
 }
 
 .fountain{
-	position:absolute;
-	top:0;
-	background-color:$color-grey;
-	width:28px;
-	height:28px;
-	animation-name:bounce_fountain;
-	animation-duration:1.235s;
-	animation-iteration-count:infinite;
-	animation-direction:normal;
-	transform:scale(.3);
-	border-radius:19px;
-}
+  position:absolute;
+  top:0;
+  background-color:$color-grey;
+  width:28px;
+  height:28px;
+  animation-name:bounce_fountain;
+  animation-duration:1.235s;
+  animation-iteration-count:infinite;
+  animation-direction:normal;
+  transform:scale(.3);
+  border-radius:19px;
+  &_1{
+    left:0;
+    animation-delay:0.496s;
+  }
 
-.fountain_1{
-	left:0;
-	animation-delay:0.496s;
-}
+  &_2{
+    left:29px;
+    animation-delay:0.6125s;
+  }
 
-.fountain_2{
-	left:29px;
-	animation-delay:0.6125s;
-}
+  &_3{
+    left:58px;
+    animation-delay:0.739s;
+  }
 
-.fountain_3{
-	left:58px;
-	animation-delay:0.739s;
-}
+  &_4{
+    left:88px;
+    animation-delay:0.8655s;
+  }
 
-.fountain_4{
-	left:88px;
-	animation-delay:0.8655s;
-}
+  &_5{
+    left:117px;
+    animation-delay:0.992s;
+  }
 
-.fountain_5{
-	left:117px;
-	animation-delay:0.992s;
-}
+  &_6{
+    left:146px;
+    animation-delay:1.1085s;
+  }
 
-.fountain_6{
-	left:146px;
-	animation-delay:1.1085s;
-}
+  &_7{
+    left:175px;
+    animation-delay:1.235s;
+  }
 
-.fountain_7{
-	left:175px;
-	animation-delay:1.235s;
-}
-
-.fountain_8{
-	left:205px;
-	animation-delay:1.3615s;
+  &_8{
+    left:205px;
+    animation-delay:1.3615s;
+  }
 }
 
 @keyframes bounce_fountain{
-	0%{
-	transform:scale(1);
-		background-color:$color-lilac;
-	}
+  0%{
+  transform:scale(1);
+    background-color:$color-lilac;
+  }
 
-	100%{
-	transform:scale(.3);
-		background-color:$color-white;
-	}
+  100%{
+  transform:scale(.3);
+    background-color:$color-white;
+  }
 }
