--- a/src/components/common/Modal/Modal.scss
+++ b/src/components/common/Modal/Modal.scss
@@ -43,6 +43,14 @@
     transform: scale(0.5);
     transition: 0.5s all;
 
+    & .card {
+      border: none;
+      box-shadow: none;
+      gap:0px;
+      padding: 0px;
+      width: auto;
+    }
+
     &.active {
       transform: scale(1);
     }
